fix(resource-gateway): keep Agent TDD projections honest